2004-03-05  Mark Kettenis  <kettenis@gnu.org>

	* i386-nat.c: Fix typo in comment.  Re-introduce paranoiac.
	* i386obsd-tdep.c: Correct spelling in comment.
	* i386nbsd-tdep.c: Correct spelling in comment.
	* sparc-tdep.c: Correct spelling in comments.

2004-03-05  David Carlton  <carlton@kealia.com>

	* cp-namespace.c (cp_lookup_transparent_type_loop): Fix recursion
	bug.

2004-03-05  Mark Kettenis  <kettenis@gnu.org>

	* sparc-tdep.c: Fix typo in comment.

2004-03-04  J. Brobecker  <brobecker@gnat.com>

	* hppa-tdep.c (hppa_frame_cache): Avoid undefined return value.

2004-03-04  Daniel Jacobowitz  <drow@mvista.com>

	* dwarf2read.c: Add comment describing memory lifetimes.
	(struct dwarf2_pinfo): Update comment.
	(dwarf2_add_field, dwarf2_add_member_fn, read_structure_scope)
	(read_enumeration, new_symbol): Don't use obsavestring.

2004-03-04  Mark Kettenis  <kettenis@gnu.org>

	* amd64-linux-nat.c (fill_fpregset): Call amd64_colletc_fxsave
	instead of amd64_fill_fxsave.
	* amd64bsd-nat.c (store_inferior_registers): Likewise.
	* amd64fbsd-nat.c (fill_fpregset): Likewise.

	* sparc-tdep.c (sparc_frame_cache): Don't bail out if %fp is zero.
	Reorganize code a bit.

2004-03-04  Orjan Friberg  <orjanf@axis.com>

	* cris-tdep.c (cris_scan_prologue): Save the frame pointer's offset
	when the frame pointer is pushed.  Don't set the frame pointer's 
	address on the stack unless it's actually located there.  
	Set the SRP's address on the stack correctly when the PC is still in
	the prologue.
	(cris_return_value): New function.
	(cris_gdbarch_init): Clear deprecated store_return_value,
	extract_return_value.

2004-03-02  Jim Blandy  <jimb@redhat.com>

	* stabsread.c (reg_value_complaint): The maximum register number
	is one less than the number of registers.

2004-03-02  Andrew Cagney  <cagney@redhat.com>

	* i386-tdep.h (enum i386_regnum): Add I386_DS_REGNUM,
	I386_ES_REGNUM, I386_FS_REGNUM, and I386_GS_REGNUM.  Remove